--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 ubuntu:20.04
+FROM --platform=linux/amd64 ubuntu:20.04 as builder
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
@@ -9,3 +9,12 @@ RUN make -j8
 RUN make install
 WORKDIR /repo
 RUN make -j8
+
+RUN mkdir -p /deps
+RUN ldd /repo/C/SRC/bin/Linux.x86_64/trim | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+
+FROM ubuntu:20.04 as package
+
+COPY --from=builder /deps /deps
+COPY --from=builder /repo/C/SRC/bin/Linux.x86_64/trim /repo/C/SRC/bin/Linux.x86_64/trim
+ENV LD_LIBRARY_PATH=/deps
